--- a/app/views/layouts/_rotate.html.haml
+++ b/app/views/layouts/_rotate.html.haml
@@ -5,19 +5,19 @@
     %ul
       %li
         %a{href: "/staticpages/activity7"}
-          %span.icon-picture
+          %span.icon-twitter
       %li
         %a{href: "/staticpages/activity4"}
-          %span.icon-headphones
+          %span.icon-book
       %li
         %a{href: "/staticpages/home"}
           %span.icon-home
       %li
         %a{href: "/staticpages/boardofeducation"}
-          %span.icon-facetime-video
+          %span.icon-group
       %li
         %a{href: "/staticpages/aboutus"}
-          %span.icon-envelope-alt
+          %span.icon-phone
     
   #cn-overlay.cn-overlay
   / End Nav Structure
