--- a/app/views/pronouns/pronoun2.html.haml
+++ b/app/views/pronouns/pronoun2.html.haml
@@ -1,22 +1,22 @@
-.row
-  .well
-    %h2  was, were:
-    %h4 We use  was with singular nouns and pronouns:
-    %h4 eg:The book was on the table.
-    %h4 I was sorry for my mistake.
-    %h4 He was very lucky.
-    %h4 We use were with plural nouns and pronouns.
-    %h4 eg:The books were on the table.
-    %h4 we were neighbours at Agra.
-    %h4 They were good speakers.
-    %h4 With you, we always use were whether you stands for one person more than one person.
-    %h4 You were the headboy last year.( you for one boy) 
-    %h4 You were late yesterday. ( you for more than one boy)
-.row
-  %br
-  %ul.pager
-    %li
-      = link_to "previous",  pronouns_pronoun1_path
-    %li
-      = link_to "next",  pronouns_pronoun3_path
-
+#well10
+  .row
+    .col-sm-8
+      %h2  was, were:
+      %h4 We use 'was' with singular nouns and pronouns:
+      %h5 &nbsp &nbsp eg:The book was on the table.
+      %h5 &nbsp &nbsp I was sorry for my mistake.
+      %h5 &nbsp &nbsp He was very lucky.
+      %h4 We use 'were' with plural nouns and pronouns.
+      %h5  &nbsp &nbsp eg:The books were on the table.
+      %h5  &nbsp &nbsp we were neighbours at Agra.
+      %h5  &nbsp &nbsp They were good speakers.
+      %h4 With you, we always use were whether you stands for one person more than one person.
+      %h5  &nbsp &nbsp You were the headboy last year.( you for one boy) 
+      %h5  &nbsp &nbsp You were late yesterday. ( you for more than one boy)
+    .col-sm-4
+      = link_to image_tag(("back.png"), height: "50px",  width: "50px"  ) ,"/pronouns/pronoun1"
+      = link_to image_tag(("next.png"), height: "50px",  width: "50px"  ) ,"/pronouns/pronoun3"
+      = link_to image_tag(("home.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity4"
+          
+     
+  
