--- a/app/views/staticpages/_ngoservices.html.haml
+++ b/app/views/staticpages/_ngoservices.html.haml
@@ -1,9 +1,9 @@
-= link_to image_tag(("eag.jpg"), height: "120px",  width: "200px"  ) ,"/staticpages/activity7"
+= link_to image_tag(("eagle.jpg"), height: "100px",  width: "200px"  ) ,"/staticpages/activity7"
 %br
-= link_to image_tag(("10.jpg"), height: "120px",  width: "200px"  ) ,"/staticpages/team"
+= link_to image_tag(("mission.jpg"), height: "100px",  width: "200px"  ) ,"/staticpages/team"
 %br
-= link_to image_tag(("70.jpg"),  height: "120px",  width: "200px"  ) ,"/staticpages/events" 
+= link_to image_tag(("events.jpg"),  height: "100px",  width: "200px"  ) ,"/staticpages/events" 
 %br
-= link_to image_tag(("50.jpg"), height: "120px",  width: "200px" ) ,"/staticpages/fame"
+= link_to image_tag(("articles.jpg"), height: "100px",  width: "200px" ) ,"/staticpages/fame"
 %br
 
