--- a/app/views/staticpages/activity3.html.haml
+++ b/app/views/staticpages/activity3.html.haml
@@ -1,42 +1,22 @@
-.well
-  %center
-    %h2 Singular  or  Plural
-  %h4 Nouns which speak of one person , place or thing are said to be in the Singular Number.
-  %h4 e.g. Friend, King, dog, bench
-  %h4 Nouns which speak of more than one person , place or thing are said to be in the Plural Number.
-  %h4 e.g Friends, Kings, dogs, benches
-.well
-  %h4 Exceptions:
-  #divstylebox
-    %h4 piano    -   pianos, &nbsp photo	-photos
-    %br
-    %h4 radio    -   radios, &nbsp bamboo-bamboos
-    %br
-  %h3 Some nouns remain the same in Singular & Plural:
-  %h5 &nbsp rice &nbsp hair &nbsp news &nbsp sugar &nbsp grass	 
-  %h5 &nbsp fish &nbsp  sheep &nbsp gold &nbsp series 
-  %br
-  %h3 Some nouns are always plural.
-  %h5 &nbsp trousers &nbsp shorts &nbsp jeans &nbsp pants &nbsp pyjamas	 
-  %h5 &nbsp spectacles &nbsp  glasses &nbsp scissors &nbsp tongs
-  %br
-  %h3 Some nouns are usually plural.
-  %h5 &nbsp shoes  &nbsp sandals  &nbsp  boots   &nbsp  chopsticks	 
-  %h5 &nbsp gloves  &nbsp clogs &nbsp  stocks
-  %br
-.well
-  %h3 Some rules to remember when changing singular sentence into plural sentence.
-  %h4 &nbsp&nbsp i - we, &nbsp He/She - they ,&nbsp a - many / several
-  %h4 &nbsp&nbsp This-These, &nbsp his/her-their, &nbsp me-us / our
-  %h4 &nbsp&nbsp That-Those, &nbsp him/her-them,  &nbsp is-are
-  %h4 &nbsp&nbsp Was-were, &nbsp myself-ourselves
-    
-.row
-  %br
-  %ul.pager
-    %li
-      = link_to "previous",  staticpages_activity2_path
-    %li
-      = link_to "next",  staticpages_activity5_path
+#well10
+  .row
+    .col-sm-8
+      %center
+        %h2 Singular  or  Plural
+        %h4 Nouns which speak of one person , place or thing are said to be in the Singular Number.
+        %h5 &nbsp e.g. Friend, King, dog, bench
+        %h4 Nouns which speak of more than one person , place or thing are said to be in the Plural Number.
+        %h5 &nbsp e.g Friends, Kings, dogs, benches
+        %h4 Exceptions:
+        #divstylebox
+          %h4 piano    -   pianos, &nbsp photo	-photos
+          %br
+          %h4 radio    -   radios, &nbsp bamboo-bamboos
+          %br
+    .col-sm-4
+      = link_to image_tag(("back.png"), height: "50px",  width: "50px"  ) ,"/staticpages/capital_letters"
+      = link_to image_tag(("next.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity9"
+      = link_to image_tag(("home.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity4"
+     
 
           
