--- a/app/views/staticpages/activity4.html.haml
+++ b/app/views/staticpages/activity4.html.haml
@@ -1,22 +1,24 @@
-.row
-  .col-sm-10
-    .well4
-      %center
-        %h2  INTRODUCTION TO ENGLISH GRAMMAR
-      %h3
-        %p{:align => "justify"}
-          %i.italic &nbsp &nbsp English grammar is the body of rules that describe the structure of expressions in the English language. This includes the structure of words, phrases, clauses and sentences.There are historical, social, and regional variations of English. Divergences from the grammar described here occur in some dialects of English. This article describes a generalized present-day Standard English, the form of speech found in types of public discourse including broadcasting, education, entertainment, government, and news reporting, including both formal and informal speech. There are certain differences in grammar between the standard forms of British English, American English and Australian English, although these are inconspicuous compared with the lexical and pronunciation differences.
+#well10
+  .row
+    .col-sm-10
+      .well4
+        %center
+          %h2  INTRODUCTION TO ENGLISH GRAMMAR
+        %h3
+          %p{:align => "justify"}
+            %i.italic &nbsp &nbsp English grammar is the body of rules that describe the structure of expressions in the English language. This includes the structure of words, phrases, clauses and sentences.There are historical, social, and regional variations of English. Divergences from the grammar described here occur in some dialects of English. This article describes a generalized present-day Standard English, the form of speech found in types of public discourse including broadcasting, education, entertainment, government, and news reporting, including both formal and informal speech. There are certain differences in grammar between the standard forms of British English, American English and Australian English, although these are inconspicuous compared with the lexical and pronunciation differences.
       
-          %br
-          %i.italic  &nbsp So, Are you ready to work on your Grammar skills? If so, you are in the right place. This program will help you to fine tune your speaking and writing skills by explaining grammatical concepts. As the program advances, your Grammar skills are sure to shine.
-          %br
-          %i.italic  &nbsp Here we will give the basic explanation of grammar which is useful to the children who are studying in primary section. This site will give you brief descripion of parts of speech like Nouns,Adjectives,Pronouns etc..
+            %br
+            %i.italic  &nbsp So, Are you ready to work on your Grammar skills? If so, you are in the right place. This program will help you to fine tune your speaking and writing skills by explaining grammatical concepts. As the program advances, your Grammar skills are sure to shine.
+            %br
+            %i.italic  &nbsp Here we will give the basic explanation of grammar which is useful to the children who are studying in primary section. This site will give you brief descripion of parts of speech like Nouns,Adjectives,Pronouns etc..
                 
 
-  .col-sm-2
-    .well4
-      %br
-      %br
-      %br
-      = render "staticpages/activity6"
-      
+    .col-sm-2
+      .well4
+        %br
+        %br
+        %br
+        = render "staticpages/activity6"
+        
+        
