--- a/app/views/staticpages/adjectives.html.haml
+++ b/app/views/staticpages/adjectives.html.haml
@@ -1,13 +1,16 @@
-.row
-  .well
-    %h2 Adjectives:
-    %h4 Adjectives are describing words.
-    %h4 eg: Gopi is an old man.(The word old tells us what kind of man Gopi is. It describes Gopi.)
-    %h4 This is a black dog.(The word black describes the dog.)
-    %h4 Gita has three pencils.(The word three tells us how many pencils Gita has.)
-    %h4 Old, black, and three are describing words and are called adjectives
-.row
-  %br
-  %ul.pager
-    %li
-      = link_to "previous",  pronouns_pronoun3_path                                      
+#well10
+  .row
+    .col-sm-8
+      %h2 Adjectives:
+      %h4 Adjectives are describing words.
+      %h4 &nbsp &nbsp eg: Gopi is an old man.(The word old tells us what kind of man Gopi is. It describes Gopi.)
+      %h4 &nbsp &nbsp &nbsp This is a black dog.(The word black describes the dog.)
+      %h4 &nbsp &nbsp &nbsp Gita has three pencils.(The word three tells us how many pencils Gita has.)
+      %h4 &nbsp &nbsp &nbsp Old, black, and three are describing words and are called adjectives
+    .col-sm-4
+      = link_to image_tag(("back.png"), height: "50px",  width: "50px"  ) ,"/pronouns/pronoun3"
+      = link_to image_tag(("home.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity4"
+ 
+  
+
+ 
