--- a/app/assets/stylesheets/component1.css
+++ b/app/assets/stylesheets/component1.css
@@ -58,13 +58,6 @@ border-bottom: 1px solid #898989;
 }  
 
 
-*, ::before, ::after {
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-}
-
-
 
 #page {
 
@@ -78,75 +71,12 @@ z-index: 100;
 }
 
 
-.gpu {
-transform: translate3D(0, 0, 0);
--webkit-transform: translate3D(0, 0, 0);
--moz-transform: translate3D(0, 0, 0);
--o-transform: translate3D(0, 0, 0);
--ms-transform: translate3D(0, 0, 0);
-}
-
-.animate {
--webkit-backface-visibility: hidden;
--webkit-transition: -webkit-transform;
--webkit-transition: 250ms ease-out;
--moz-transition: -moz-transform 250ms ease-out;
-transition: transform 250ms ease-out;
-}
-
-.animate-ease-out {
--webkit-backface-visibility: hidden;
--webkit-transition: -webkit-transform;
--webkit-transition: 250ms ease-out;
--moz-transition: -webkit-transform;
--webkit-transition: 250ms ease-out;
--o-transition:  -webkit-transform;
--webkit-transition: 250ms ease-out;
--ms-transition: -webkit-transform;
--webkit-transition: 250ms ease-out;
-transition: transform .25s ease-out;
-}
-
-.left-open {
--webkit-transform: translate3d(300px,0,0);
--moz-transform: translate3d(300px,0,0);
-transform: translate3d(300px,0,0);
-}
-
-.panel-position-left {
--webkit-transform: translate3d(-300px,0,0);
--moz-transform: translate3d(-300px,0,0);
-transform: translate3d(-300px,0,0);
-}
-
-.panel-position-left.panel-open {
--webkit-transform: translate3d(0,0,0);
--moz-transform: translate3d(0,0,0);
-transform: translate3d(0,0,0);
-}
-
-
 .pointer{
     position:absolute;
     z-index:300;
     left:300px;
     top:20%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .row1 {
@@ -213,7 +143,7 @@ transform: translate3d(0,0,0);
     background-repeat: no-repeat;
     width:100%;
     height:500px;
-    background-size: 900px 500px;
+    background-size: 900px 400px;
     padding: 50px 30px 10px 90px;
     border-radius: 8px;
 
@@ -306,6 +236,17 @@ transform: translate3d(0,0,0);
   color: #333;
 }
 
+#well10
+{
+
+    background-image:url("img.jpeg") ;
+    background-repeat: no-repeat;
+    height: 530px;
+   
+    padding: 10px 30px 10px 130px; 
+    background-size: cover; 
+}
+
 html,
 body {
   
@@ -338,7 +279,7 @@ i.italic{
 .well2{
     padding: 20px 20px 80px 70px; 
     width: 400px;
-    height: 320px;
+    height: 280px;
     font-size:15px;
     color: #FFFFFF;
     border-radius: 8px;
@@ -590,11 +531,11 @@ items should be rotated by x, minus (sum of angles - 180)2s (for this demo) */
   border: none;
 }
 
-.no-csstransforms .cn-wrapper li a:hover,
-.no-csstransforms .cn-wrapper li a:active,
-.no-csstransforms .cn-wrapper li a:focus {
-  background-color: white;
-}
+/* .no-csstransforms .cn-wrapper li a:hover, */
+/* .no-csstransforms .cn-wrapper li a:active, */
+/* .no-csstransforms .cn-wrapper li a:focus { */
+/*   background-color: white; */
+/* } */
 
 .no-csstransforms .cn-wrapper li.active a {
   background-color: #6F325C;
