--- a/app/views/staticpages/capital_letters.html.haml
+++ b/app/views/staticpages/capital_letters.html.haml
@@ -1,10 +1,12 @@
-%html
-  %body
-    %form
+#well10
+  .row
+    .col-sm-8
       %h2 Capital Letters:
       %h4 All  names  begin with capital letters.
       %h4 Read the names of the children in alphabetical order.
-      = image_tag("capital.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:450px;width:450px")
-      %ul.pager
-        %li= link_to "previous",   staticpages_activity16_path
-        %li= link_to "next" ,staticpages_activity3_path
+      = image_tag("capital.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:400px;width:400px")
+    .col-sm-4
+      = link_to image_tag(("back.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity16"
+      = link_to image_tag(("next.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity3"
+      = link_to image_tag(("home.png"), height: "50px",  width: "50px"  ) ,"/staticpages/activity4"
+       
