--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,11 +6,10 @@
     = csrf_meta_tags
   %body{"ng-app" => "myApp"}
     %h1.italic I AM GIFTED
-    = render 'layouts/menu'  
     %p.notice= notice
     %p.alert= alert
     = yield
-   
+    = render 'layouts/rotate'
     = render 'layouts/footer'
     
      
